2005-06-04  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcolorframe.[ch]: added API to show a number in
	front of the color area.

	* app/widgets/gimpsamplepointeditor.c: use the new API to put the
	sample points' numbers there.

2005-06-03  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/core/gimpitem-align.[ch]: newly created to
	hold code for gimp_item_align().

	* app/core/Makefile.am: add new files
	
	* app/core/gimpitem.[ch]: remove code from here.

	* app/tools/gimpaligntool.c: fix includes and remove
	unneeded includes.
	
2005-06-03  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcolorframe.c (gimp_color_frame_init): pack the
	color area and the labels into different vboxes to make the widget
	compact again.

2005-06-03  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* gimp/app/tools/Makefile.am
	* gimp/app/tools/gimp-tools.c
	* gimp/app/tools/gimpalignoptions.c
	* gimp/app/tools/gimpalignoptions.h
	* gimp/app/tools/gimpaligntool.c
	* gimp/app/tools/gimpaligntool.h: Add new tool for
	aligning layers etc, as described in bug #147437.

	* gimp/app/core/gimpitem.c
	* gimp/app/core/gimpitem.h (gimp_item_align): add
	function required by new tool.

	* gimp/app/core/core-enums.c
	* gimp/app/core/core-enums.h: add enum for alignment
	types.

	* gimp/themes/Default/images/stock-hcenter-24.png
	* gimp/themes/Default/images/stock-vcenter-24.png
	* gimp/libgimpwidgets/gimpstock.c
	* gimp/libgimpwidgets/gimpstock.h
	* gimp/themes/Default/images/Makefile.am
	* gimp/themes/Default/images/makefile.msc: add two
	stock symbols, modeled on the gravity symbols.

2005-06-02  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimprectangletool.c (gimp_rectangle_tool_motion):
	Don't change function before creating new rectangle;
	cause of problem identified by Karine Delvare.
	
2005-06-02  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* plug-ins/common/screenshot.c: trap errors when running
	XGrabKey, to prevent bail-out on BadAccess error as